# institut_maupertuis_robots_descriptions

./: .travis.sh  .travis.yml  .travis_vtk.sh  README.md
fanuc_m10ia_ensenso/fanuc_m10ia_ensenso_support/: CMakeLists.txt  package.xml
fanuc_m10ia_ensenso/fanuc_m10ia_ensenso_support/config/: robot_state_visualize.rviz
fanuc_m10ia_ensenso/fanuc_m10ia_ensenso_support/launch/: load_m10ia_ensenso_eef.launch  robot_state_visualize_m10ia_ensenso_eef.launch  test_m10ia_ensenso_eef.launch
fanuc_m10ia_ensenso/fanuc_m10ia_ensenso_support/meshes/collision/: mounting_plate.stl
fanuc_m10ia_ensenso/fanuc_m10ia_ensenso_support/meshes/visual/: mounting_plate.dae
fanuc_m10ia_ensenso/fanuc_m10ia_ensenso_support/tests/: roslaunch_test.xml
fanuc_m10ia_ensenso/fanuc_m10ia_ensenso_support/urdf/: m10ia_ensenso_eef.xacro  m10ia_ensenso_eef_macro.xacro  mounting_plate.xacro  mounting_plate_macro.xacro
fanuc_m10ia_kinect/fanuc_m10ia_kinect_support/: CMakeLists.txt  package.xml
fanuc_m10ia_kinect/fanuc_m10ia_kinect_support/launch/: load_m10ia_kinect_eef.launch  robot_state_visualize_m10ia_kinect_eef.launch  test_m10ia_kinect_eef.launch
fanuc_m10ia_kinect/fanuc_m10ia_kinect_support/meshes/collision/: mounting_plate.stl
fanuc_m10ia_kinect/fanuc_m10ia_kinect_support/meshes/visual/: mounting_plate.dae
fanuc_m10ia_kinect/fanuc_m10ia_kinect_support/tests/: roslaunch_test.xml
fanuc_m10ia_kinect/fanuc_m10ia_kinect_support/urdf/: m10ia_kinect_eef.xacro  m10ia_kinect_eef_macro.xacro  mounting_plate.xacro  mounting_plate_macro.xacro
fanuc_r1000ia_grinding/fanuc_r1000ia_ensenso_n10_grinding_support/: CMakeLists.txt  README.md  package.xml
fanuc_r1000ia_grinding/fanuc_r1000ia_ensenso_n10_grinding_support/launch/: load_r1000ia_grinding.launch
fanuc_r1000ia_grinding/fanuc_r1000ia_ensenso_n10_grinding_support/tests/: roslaunch_test.xml
fanuc_r1000ia_grinding/fanuc_r1000ia_ensenso_n10_grinding_support/urdf/: r1000ia_grinding.xacro  r1000ia_grinding_macro.xacro
fanuc_r1000ia_grinding/fanuc_r1000ia_sls_2_grinding_resources/: CMakeLists.txt  README.md  package.xml
fanuc_r1000ia_grinding/fanuc_r1000ia_sls_2_grinding_resources/cal/: camera.cal  projector.cal
fanuc_r1000ia_grinding/fanuc_r1000ia_sls_2_grinding_resources/config/: target_locator.rviz  test_calib.rviz
fanuc_r1000ia_grinding/fanuc_r1000ia_sls_2_grinding_resources/launch/: calibrate_sls_2_r1000ia_grinding.launch  caljob_create.launch  sls_2_calib_test.launch  sls_2_calibration.launch  target_locator.launch
fanuc_r1000ia_grinding/fanuc_r1000ia_sls_2_grinding_resources/src/: test_calibration.cpp
fanuc_r1000ia_grinding/fanuc_r1000ia_sls_2_grinding_resources/yaml/: caljob.yaml  circles10x10.yaml  mutable_joint_states.yaml  sls_2_calibration.yaml  sls_2_camera_def.yaml
fanuc_r1000ia_grinding/grinding_effector_description/: README.md  package.xml
fanuc_r1000ia_grinding/grinding_effector_description/launch/: load_grinding_eef.launch
fanuc_r1000ia_grinding/grinding_effector_description/meshes/: grinding_eef.blend.7z
fanuc_r1000ia_grinding/grinding_effector_description/urdf/: grinding_eef.xacro  grinding_eef_macro.xacro
fanuc_r1000ia_grinding/grinding_workcell_description/: README.md  package.xml
fanuc_r1000ia_grinding/grinding_workcell_description/launch/: load_grinding_old_workcell.launch  load_grinding_workcell.launch  test_grinding_old_workcell.launch
fanuc_r1000ia_grinding/grinding_workcell_description/meshes/collision/: chair.stl  grinding_old_workcell.stl  grinding_workcell.stl  table.stl
fanuc_r1000ia_grinding/grinding_workcell_description/meshes/visual/: chair.dae  grinding_old_workcell.dae  grinding_workcell.dae  table.dae
fanuc_r1000ia_grinding/grinding_workcell_description/urdf/: grinding_old_workcell.xacro  grinding_old_workcell_macro.xacro  grinding_workcell.xacro  grinding_workcell_macro.xacro
fanuc_r1000ia_sls_2_grinding_support/: package.xml
fanuc_r1000ia_sls_2_grinding_support/launch/: test_r1000ia_grinding.launch
fanuc_r1000ia_sls_2_grinding_support/urdf/: r1000ia_grinding.xacro  r1000ia_grinding_macro.xacro
institut_maupertuis_robots_descriptions/: CMakeLists.txt  README.md  package.xml
sensors/ensenso_n10_description/: CMakeLists.txt  README.md  package.xml
sensors/ensenso_n10_description/launch/: load_ensenso_n10.launch  test_ensenso_n10.launch
sensors/ensenso_n10_description/meshes/: ensenso.blend.7z
sensors/ensenso_n10_description/meshes/collision/: ensenso.stl
sensors/ensenso_n10_description/meshes/visual/: ensenso.dae
sensors/ensenso_n10_description/urdf/: ensenso_n10.xacro  ensenso_n10_macro.xacro
sensors/kinect_v1_description/: CMakeLists.txt  README.md  package.xml
sensors/kinect_v1_description/launch/: load_kinect_v1.launch  test_kinect_v1.launch
sensors/kinect_v1_description/meshes/collision/: kinect.stl
sensors/kinect_v1_description/urdf/: kinect_v1.xacro  kinect_v1_macro.xacro
sensors/sls_2_description/: CMakeLists.txt  README.md  package.xml
sensors/sls_2_description/launch/: load_sls_2.launch  test_sls_2.launch
sensors/sls_2_description/meshes/: sls_2.blend.7z
sensors/sls_2_description/meshes/collision/: sls_2.stl  sls_2_cam_fixture.stl  sls_2_camera.stl  sls_2_projector_ruler.stl
sensors/sls_2_description/meshes/visual/: sls_2.dae  sls_2_cam_fixture.dae  sls_2_camera.dae  sls_2_projector_ruler.dae
sensors/sls_2_description/urdf/: sls_2.xacro  sls_2_macro.xacro
sensors/sls_2_publishers/: CMakeLists.txt  README.md  package.xml
sensors/sls_2_publishers/launch/: sls_2_images.launch
sensors/sls_2_publishers/src/: sls_2_images.cpp
ur10_ensenso/ur10_ensenso_support/: CMakeLists.txt  package.xml
ur10_ensenso/ur10_ensenso_support/config/: robot_state_visualize.rviz
ur10_ensenso/ur10_ensenso_support/launch/: driver_ur10_ensenso.launch  load_ur10_ensenso.launch  robot_interface_streaming_ur10_ensenso.launch  robot_state_visualize_ur10_ensenso.launch  test_ur10_ensenso.launch
ur10_ensenso/ur10_ensenso_support/urdf/: mounting_plate.xacro  mounting_plate_macro.xacro  ur10_ensenso.xacro  ur10_ensenso_macro.xacro
(+154 files in other folders)
