<?xml version="1.0"?>
<package>
  <name>fanuc_r1000ia_sls_2_grinding_support</name>
  <version>0.0.0</version>
  <description>Fanuc R-1000iA with a grinding end effector</description>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend version_gte="1.9.55">roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>fanuc_r1000ia_support</run_depend>
  <run_depend>grinding_eef_description</run_depend>
  <run_depend>sls_2_description</run_depend>
</package>
