<?xml version="1.0"?>
<package>
  <name>grinding_workcell_description</name>
  <version>0.0.0</version>
  <description>Grinding end effector description</description>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>xacro</run_depend>
</package>
