<?xml version="1.0"?>
<package>
  <name>kinect_v1_description</name>
  <version>0.0.0</version>
  <description>Microsoft Kinect v1 description. The support has been removed in this description</description>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>xacro</run_depend>
</package>
