<?xml version="1.0"?>
<package format="2">
  <name>sls_2_publishers</name>
  <version>0.0.0</version>
  <description>Publish images and or point clouds from an SLS-2 device</description>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
