<?xml version="1.0"?>
<package>
  <name>ur10_ensenso_support</name>
  <version>0.0.0</version>
  <description>Universal Robot UR10 package with an Ensenso sensor mounted on the tool.</description>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend version_gte="1.9.55">roslaunch</build_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ur_description</run_depend>
  <run_depend>ur_driver</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>excelcar_workcell_description</run_depend>
  <run_depend>ensenso_n10_description</run_depend>
</package>
